--- a/app/src/main/res/layout/item_story_narrow.xml
+++ b/app/src/main/res/layout/item_story_narrow.xml
@@ -80,13 +80,13 @@
 
     <ImageView
         android:id="@+id/ivIsCheckedIn"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:layout_alignStart="@+id/tvDate"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
         android:layout_alignTop="@+id/ivGradient"
-        android:layout_marginRight="3dp"
-        android:layout_marginStart="52dp"
+        android:layout_marginRight="-3dp"
         android:layout_marginTop="3dp"
+        android:layout_toStartOf="@+id/ivFavoriteIcon"
+        android:paddingBottom="10dp"
         android:src="@drawable/ic_check_circle_black_24dp"
         android:tint="#03c91e" />
 
