--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -27,7 +27,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_toEndOf="@id/ivProfileImage"
-            android:text="Jane Doe"
+            android:text="Coleman Maverick Johnston"
             android:layout_marginTop="10dp"
             android:textColor="@android:color/white"
             android:textSize="22sp"
